--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "dependencies": {
     "@floating-ui/react": "^0.27.8",
     "@headlessui/react": "^2.2.2",
-    "@heroicons/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tanstack/react-form": "^1.9.1",
     "next": "^14.2.28",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "rizzui": "^0.8.7",
     "zod": "^3.24.4"
   },
