--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "next": "^14.2.28",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "rizzui": "^0.8.7",
+    "simplebar-react": "^3.3.0",
     "zod": "^3.24.4"
   },
   "devDependencies": {
